--- a/Website/package.json
+++ b/Website/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "ethers": "^5.4.4",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "web3": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
